update services page

--- a/css/services.css
+++ b/css/services.css
@@ -5,23 +5,78 @@
 }
 
 .nav-item a {
-  color: black;
-  font-weight: bold;
+    color: black;
+    font-weight: bold;
 }
 
 .nav-links button,
 #getInTouch {
     padding: 10px 20px;
     font-size: 1rem;
-    border: 1px solid #70aa26;
+    border: none;
     color: white;
     background-color: #70aa26;
+    display: block;
+    white-space: nowrap;
+    font-weight: bold;
+    /* display:block */
 }
 
-/*Section two  */
-#two{
-    height:80vh;
+.bigHeadings {
+    font-size: 50px;
+    font-weight: 600;
+    /* color:#134872 */
+    ;
+    word-wrap: wrap;
 }
+
+.medium-size-text {
+    font-size: 24px;
+    font-weight: 400;
+    margin-bottom: 16px;
+}
+
+
+/*Section two  */
+.hero {
+    background-color: #f4f6fe;
+}
+
+
+.hero-left {
+    padding: 20px 200px 20px 55px;
+    color: white;
+    background-color: #252a4e;
+    border-bottom-right-radius: 50px;
+}
+
+.hero-right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100%;
+}
+
+.hero-right img {
+    max-width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 #reviews {
     padding: 80px 0;
@@ -40,17 +95,19 @@
 
 }
 
-.blog-heading{
-    padding:60px 20px 40px 20px;
+.blog-heading {
+    padding: 60px 20px 40px 20px;
     margin-bottom: 5px;
 }
-.blog-heading-title{
-    width:100%;
+
+.blog-heading-title {
+    width: 100%;
     /* border:1px solid blue */
 
 }
+
 .all-post-btn {
-    margin-right:0px;
+    margin-right: 0px;
     align-content: center;
     align-items: center;
 
@@ -83,9 +140,9 @@
 }
 
 
-.img-box{
+.img-box {
 
-    width:100%;
+    width: 100%;
     max-width: 150px;
 }
 
@@ -106,23 +163,26 @@
 
 
 }
-.media-app{
-    height:10px;
-    display:flex;
+
+.media-app {
+    height: 10px;
+    display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
 }
-#app-svg{
-    padding:5px;
-    height:50px;
+
+#app-svg {
+    padding: 5px;
+    height: 50px;
     border-radius: 50%;
-    background-color:#134872;
-    
+    background-color: #134872;
+
 }
-#app-svg svg{
-    height:100%;
-    width:100%;
+
+#app-svg svg {
+    height: 100%;
+    width: 100%;
     border-radius: 50%;
     object-fit: contain;
 }
