--- a/css/services.css
+++ b/css/services.css
@@ -9,7 +9,7 @@
     font-weight: bold;
 }
 
-.nav-links button,
+/* .nav-links button, */
 #getInTouch {
     padding: 10px 20px;
     font-size: 1rem;
@@ -20,6 +20,10 @@
     white-space: nowrap;
     font-weight: bold;
     /* display:block */
+}
+
+.highlighter{
+    color:#70aa26
 }
 
 .bigHeadings {
@@ -58,10 +62,59 @@
 }
 
 .hero-right img {
-    max-width: 100%;
-    height: auto;
+    /* max-width: 100%; */
+    /* height: auto; */
     object-fit: contain;
 }
+
+/* section three */
+
+.track-record{
+    padding:40px;
+    margin:20px
+}
+.website-card{
+    min-height: 200px;
+    border-radius: 10px;
+    padding:40px 15px
+}
+
+
+/* Section Four */
+
+.web-app-dev{
+    /* min-height: 600px; */
+    border-radius: 10px;
+    padding:40px 15px;
+    border-color: 10px solid black;
+}
+.web-app-dev-img{
+height:200px;
+display:flex;
+justify-content: center;
+align-items: center;
+    object-fit: contain;
+    width:100%
+}
+.web-app-dev-img img{
+    height:100%;
+    width:auto;
+    
+    object-fit: contain;
+}
+.web-app-dev-text{
+    margin:40px 0;
+}
+.sticky-left{
+    position:sticky;
+    top:0;
+    align-self: flex-start;
+}
+
+
+
+
+
 
 
 
