--- a/css/services.css
+++ b/css/services.css
@@ -304,49 +304,44 @@ align-items: center;
 }
 
 
-.img-box {
 
-    width: 100%;
-    max-width: 150px;
-}
+/* Footer Section */
 
-.footer-img-box {
-
+.footer-img {
     display: flex;
     justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
 }
-
-.img-box img {
-    height: auto;
+.footer-img img {
+    max-height: 200px;
     object-fit: contain;
-    display: block;
-    max-width: 100%;
-
-
 }
-
-.media-app {
-    height: 10px;
+.social-apps {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
 }
-
-#app-svg {
-    padding: 5px;
-    height: 50px;
-    border-radius: 50%;
+.app-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
     background-color: #134872;
-
-}
-
-#app-svg svg {
-    height: 100%;
-    width: 100%;
     border-radius: 50%;
-    object-fit: contain;
+    margin: 5px;
+    /* vertical-align: middle; */
+}
+.app-icon svg {
+    display:block;
+    height: 60%;
+    width: 60%;
+}
+.foot-sec-heading{
+    font-size: 22px;
+    font-weight: 600;
+}
+.foot-sec-list li{
+list-style-type:none;
+line-height: 2;
+
 }
